--- a/src/css/helpers/variables.scss
+++ b/src/css/helpers/variables.scss
@@ -1,3 +1,6 @@
 // Colors
 $laranja-multe: #FFB33F;
 $cinza-padrao: #71839B;
+
+// Fonts
+$font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
