--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 /*======== RESET ========*/
 * {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
   padding: 0;
   font-size: 100%;
