Alterações no reset.scss, inserido tag <main> no conteudo principal

--- a/src/css/helpers/variables.scss
+++ b/src/css/helpers/variables.scss
@@ -3,4 +3,5 @@ $laranja-multe: #FFB33F;
 $cinza-padrao: #71839B;
 
 // Fonts
-$font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+$font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,
+        "Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
