--- a/src/css/base/reset.scss
+++ b/src/css/base/reset.scss
@@ -1,11 +1,13 @@
 /*======== RESET ========*/
 
 * {
-    font-family: $font;
     margin: 0;
     padding: 0;
-    font-size: 100%;
-    outline: none;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: $font;
 }
 
 a {
