--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,10 +1,11 @@
 /*======== RESET ========*/
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
   padding: 0;
-  font-size: 100%;
-  outline: none; }
+  box-sizing: border-box; }
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
 
 a {
   text-decoration: none; }
@@ -41,7 +42,7 @@ img {
         color: #FFB33F;
         border-bottom: 3px solid #FFB33F; }
 
-.corpo {
+.principal-content {
   background-color: #F4F7FC;
   width: 100%;
   min-height: 91vh; }
