Inserido saudação ao usuário no principal content

--- a/src/css/components/_dropdown.scss
+++ b/src/css/components/_dropdown.scss
@@ -19,7 +19,10 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+.dropdown-content a:hover {
+    background-color: #ddd;
+    transition: 0.3s;
+}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .showDropdown {
