--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,7 +8,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: inherit; }
 
 ul {
   list-style: none; }
@@ -41,6 +42,27 @@ img {
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .showDropdown {
+  display: flex;
+  flex-direction: column; }
+
+.menu-dropdown-subitem {
+  display: none;
+  position: absolute;
+  top: 1cm;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1; }
+  .menu-dropdown-subitem a:hover {
+    background-color: #ddd;
+    transition: 0.3s; }
+  .menu-dropdown-subitem a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: flex; }
+
+.show-subitem {
   display: flex;
   flex-direction: column; }
 
