--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,6 +4,7 @@
 @import 'base/reset';
 
 @import 'components/dropdown';
+@import 'components/dropdown-menu';
 
 @import 'layouts/header';
 @import 'layouts/body';
