--- a/src/css/layouts/_header.scss
+++ b/src/css/layouts/_header.scss
@@ -28,6 +28,8 @@
             display: flex;
             margin-left: 40px;
             cursor: pointer;
+            border-bottom: 3px solid transparent;
+
             
             .material-icons{
                 font-size: 16px;
@@ -36,7 +38,7 @@
             
             &:hover{
                 color: $laranja-multe;
-                border-bottom: 3px solid $laranja-multe;
+                border-color: $laranja-multe;
                 transition: 0.2s;
             }
         }
