--- a/src/css/main.css
+++ b/src/css/main.css
@@ -89,13 +89,14 @@ img {
       align-items: center;
       display: flex;
       margin-left: 40px;
-      cursor: pointer; }
+      cursor: pointer;
+      border-bottom: 3px solid transparent; }
       .header-menu-items .material-icons {
         font-size: 16px;
         margin-right: 6px; }
       .header-menu-items:hover {
         color: #FFB33F;
-        border-bottom: 3px solid #FFB33F;
+        border-color: #FFB33F;
         transition: 0.2s; }
 
 .principal-content {
