Adicionado Media Queries para Desktop

--- a/src/css/layouts/_header.scss
+++ b/src/css/layouts/_header.scss
@@ -10,12 +10,54 @@
         width: 1.1cm;
     }
     
+    &-user{
+        cursor: pointer;
+        color: $cinza-padrao;
+        align-items: center;
+        
+        @include mq('desktop'){
+            margin-right: 16px;
+        }
+        
+        &-subitems{
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            position: absolute;
+            background: #ffff;
+            width: 40%;
+            box-shadow: black -1px -1px 20px -1px;
+            
+            @include mq ('desktop'){
+                flex-direction: column;
+                width: 10%;
+            }
+            
+            &-link{
+                width: 100%;
+                text-align: center;
+                
+                &:hover{
+                    background: #F2F2F2;
+                }
+            }
+            
+            a{
+                padding: 5px 0;
+            }
+        }
+    }
+    
     &-hamburger,
     &-close{
         margin-right: 16px;
         color: $cinza-padrao;
         cursor: pointer;
         font-size: 32px;
+        
+        @include mq('desktop'){
+            display: none;
+        }
     }
     
     &-menu{
@@ -27,25 +69,60 @@
         top: 1.3cm;
         background: #ffff;
         
+        @include mq('desktop'){
+            display: flex;
+            flex-direction: row;
+            position: inherit;
+        }
+        
         &-items{
             height: 100%;
             display: flex;
             flex-direction: column;
             align-items: baseline;
-            padding: 5px 0;
+            margin: 0 10px;
+            padding: 13px 5px;
             cursor: pointer;
-
+            
+            @include mq ('desktop'){
+                border-bottom: 3px solid transparent;
+                
+                &:hover{
+                    border-color: $laranja-multe;
+                    transition: 0.2s;
+                }
+            }
+            
             &-sub{
                 display: none;
                 color: black;
                 width: 100%;
                 background-color: #FFB33F;
-
+                
+                @include mq ('desktop'){
+                    color: $cinza-padrao;
+                    position: absolute;
+                    width: 10%;
+                    top: 1cm;
+                    box-shadow: black -1px -1px 20px -1px;
+                    background: #ffff;
+                }
+                
                 li{
-                    padding: 5px 10px;
+                    margin: 0 10px;
+                    padding: 0 5px; 
+                    
+                    @include mq ('desktop'){
+                        padding: 10px 0;
+                        margin: 0;
+                        text-align: center;
+                        &:hover{
+                            background-color: #F2F2F2;
+                        }
+                    }
                 }
             }
-
+            
             
             .material-icons{
                 font-size: 16px;
